Added new StarComponent

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ APM/app/products/product-list.component.js.map
 APM/app/products/product-list.component.js
 APM/app/products/product-filter.pipe.js
 APM/app/products/product-filter.pipe.js.map
+APM/app/shared/star.component.js.map
+APM/app/shared/star.component.js
