Completed Services and dependency Injection.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ APM/app/products/product-filter.pipe.js
 APM/app/products/product-filter.pipe.js.map
 APM/app/shared/star.component.js.map
 APM/app/shared/star.component.js
+APM/app/products/product.service.js.map
+APM/app/products/product.service.js
+APM/app/app.component.js
+APM/app/app.component.js.map
