Completed  Introduction of Navigation and routing Basics

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ APM/app/shared/star.component.js.map
 APM/app/shared/star.component.js
 APM/app/products/product.service.js.map
 APM/app/products/product.service.js
+APM/app/app.component.js
+APM/app/app.component.js.map
+APM/app/app.module.js
+APM/app/app.module.js.map
+
+APM/app/products/product-detail.component.js
+APM/app/products/product-detail.component.js.map
